--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,6 @@ body {
 }
 
 .form-row-wrapper {
-  height: 372px;
   border-radius: 15px;
   background-color: #ffffff;
 }
@@ -39,7 +38,8 @@ body {
   object-fit: contain;
 }
 
-.login-title {
+.login-title,
+.register-title {
   font-family: 'Nunito Sans', sans-serif;
   font-size: 36px;
   font-weight: 600;
@@ -50,11 +50,13 @@ body {
   color: #5f99ed;
 }
 
-.login-form {
+.login-form,
+.register-form {
   margin-top: 4rem;
 }
 
-.login-text {
+.login-text,
+.register-text {
   display: block;
   width: 100%;
   height: calc(1.9em + 0.75rem + 2px);
@@ -106,7 +108,7 @@ body {
   color: #8c8c8c;
 }
 
-.help-block {
+.warning {
   font-size: 10px;
   position: absolute;
 }
@@ -133,7 +135,8 @@ body {
   color: #5f99ed;
 }
 
-.login-button {
+.login-button,
+.register-button {
   display: inline-block;
   width: 143px;
   height: 40px;
@@ -159,7 +162,7 @@ body {
   color: #ffffff;
 }
 
-.register-button {
+.create-account-button {
   display: inline-block;
   width: 100%;
   height: 60px;
