Add new class to stylesheet

--- a/src/index.css
+++ b/src/index.css
@@ -218,7 +218,8 @@ body {
   color: #ffffff;
 }
 
-.create-account-button {
+.create-account-button,
+.back-to-login-button {
   display: inline-block;
   width: 100%;
   height: 60px;
