--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,10 @@
-a {
-  cursor: pointer;
+html {
+  font-family: 'Nunito Sans', sans-serif;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  letter-spacing: normal;
 }
-
-/* 
-div {
-  border: 0.5px solid black;
-} 
-*/
 
 body {
   background-image: url('./_assets/le-bg.jpg');
@@ -14,41 +12,8 @@ body {
   background-size: auto;
 }
 
-.form-row-wrapper {
-  border-radius: 15px;
-  background-color: #ffffff;
-}
-
-.logo {
-  width: 100%;
-  height: auto;
-  max-width: 301px;
-  max-height: 63px;
-  object-fit: contain;
-}
-
-.login-title,
-.register-title,
-.reset-title {
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 36px;
-  font-weight: 600;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #5f99ed;
-}
-
-.login-form,
-.register-form,
-.reset-form {
-  margin-top: 4rem;
-}
-
-.login-text,
-.register-text,
-.reset-text {
+input[type='text'],
+input[type='password'] {
   display: block;
   width: 100%;
   height: calc(1.9em + 0.75rem + 2px);
@@ -64,39 +29,121 @@ body {
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
+form {
+  margin-top: 4rem;
+}
+
+label {
+  font-size: 14px;
+  font-weight: normal;
+  color: #5f99ed;
+}
+
+button {
+  display: inline-block;
+  border: 1px solid transparent;
+  background-color: #5f99ed;
+  vertical-align: middle;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  color: #ffffff;
+}
+
+button.large {
+  width: 100%;
+  height: 60px;
+  border-radius: 15px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+button.small {
+  height: 40px;
+  border-radius: 34px;
+  font-size: 18px;
+  font-weight: 300;
+}
+
+button.login,
+button.register {
+  width: 143px;
+}
+
+button.reset {
+  width: 202px;
+}
+
+h2.title {
+  font-size: 36px;
+  font-weight: 600;
+  color: #5f99ed;
+}
+
+a {
+  cursor: pointer;
+}
+
+a.bold {
+  font-weight: bold;
+}
+
+p {
+  font-weight: 300;
+  color: #5f99ed;
+}
+
+p.small {
+  font-size: 14px;
+}
+
+p.large {
+  font-size: 16px;
+}
+
+.link {
+  font-size: 14px;
+  font-weight: bold;
+  color: #5f99ed;
+}
+
+.form-container {
+  border-radius: 15px;
+  background-color: #ffffff;
+}
+
+.logo {
+  width: 100%;
+  height: auto;
+  max-width: 301px;
+  max-height: 63px;
+  object-fit: contain;
+}
+
 ::placeholder {
   /* Chrome, Firefox, Opera, Safari 10.1+ */
-  font-family: 'Nunito Sans', sans-serif;
   font-size: 14px;
   font-weight: 300;
   font-style: italic;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #8c8c8c;
 }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
-  font-family: 'Nunito Sans', sans-serif;
   font-size: 14px;
   font-weight: 300;
   font-style: italic;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #8c8c8c;
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
-  font-family: 'Nunito Sans', sans-serif;
   font-size: 14px;
   font-weight: 300;
   font-style: italic;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #8c8c8c;
 }
 
@@ -105,154 +152,9 @@ body {
   position: absolute;
 }
 
-/*
-.alert {
-  position: absolute !important;
-  top: 10px;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  width: 95%;
-} 
-*/
-
-.remember-me {
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #5f99ed;
-}
-
-.forgot-password {
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 14px;
-  font-weight: bold;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #5f99ed;
-}
-
-.tos {
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 14px;
-  font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #5f99ed;
-}
-
-.tos .bold {
-  font-weight: bold;
-}
-
-.forgot-password-desc {
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 16px;
-  font-weight: 300;
-  font-stretch: normal;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #5f99ed;
-}
-
-.login-button,
-.register-button {
-  display: inline-block;
-  width: 143px;
-  height: 40px;
-  border: 1px solid transparent;
-  border-radius: 34px;
-  background-color: #5f99ed;
-  vertical-align: middle;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-  /* button caption */
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #ffffff;
-}
-
-.reset-button {
-  display: inline-block;
-  width: 202px;
-  height: 40px;
-  border: 1px solid transparent;
-  border-radius: 34px;
-  background-color: #5f99ed;
-  vertical-align: middle;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-  /* button caption */
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 18px;
-  font-weight: 300;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #ffffff;
-}
-
-.create-account-button,
-.back-to-login-button {
-  display: inline-block;
-  width: 100%;
-  height: 60px;
-  border: 1px solid transparent;
-  border-radius: 15px;
-  background-color: #5f99ed;
-  vertical-align: middle;
-  user-select: none;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-
-  /* button caption */
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 24px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
-  color: #ffffff;
-}
-
 .copyright {
-  font-family: 'Nunito Sans', sans-serif;
   font-size: 18px;
   font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: normal;
-  letter-spacing: normal;
   color: #ffffff;
 }
 
@@ -272,16 +174,4 @@ body {
   .row-container {
     height: 100vh;
   }
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
 }
