--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,20 @@ p.large {
   font-size: 16px;
 }
 
+.alert {
+  position: absolute !important;
+  left: 0;
+  right: 0;
+  margin-bottom: 0 !important;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 1;
+  top: 38%;
+  width: 30%;
+  text-align: center;
+  padding: 0.5rem !important;
+}
+
 .row-container {
   height: 100%;
   background-image: url('./_assets/le-bg.jpg');
