--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,7 @@ p.large {
 
 @media screen and (max-width: 600px) and(orientation:portrait) {
   .container,
-  .container-fluids {
+  .container-fluid {
     height: 100vh;
   }
 }
@@ -187,7 +187,7 @@ p.large {
 /* iPad Portrait and Landscape */
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   .container,
-  .container-fluids {
+  .container-fluid {
     height: 100vh;
   }
 }
@@ -195,7 +195,7 @@ p.large {
 /* iPhone X Portrait */
 @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 1) {
   .container,
-  .container-fluids {
+  .container-fluid {
     height: 100vh;
   }
 }
