--- a/src/_assets/css/theme.css
+++ b/src/_assets/css/theme.css
@@ -57,7 +57,7 @@
   box-sizing: border-box; }
 
 html {
-  font-family: sans-serif;
+  font-family: 'Nunito Sans', sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -10737,24 +10737,24 @@ textarea[resize="horizontal"] {
   height: 5rem; }
   .icon-xl i, .icon-xl svg {
     font-size: 4.25rem; }
-  .icon-xl + .icon-text {
-    width: calc(100% - $icon-size-xl - 1); }
+  /* .icon-xl + .icon-text {
+    width: calc(100% - $icon-size-xl - 1); } */
 
 .icon-lg {
   width: 4rem;
   height: 4rem; }
   .icon-lg i, .icon-lg svg {
     font-size: 3.25rem; }
-  .icon-lg + .icon-text {
-    width: calc(100% - $icon-size-lg - 1); }
+  /* .icon-lg + .icon-text {
+    width: calc(100% - $icon-size-lg - 1); } */
 
 .icon-sm {
   width: 2rem;
   height: 2rem; }
   .icon-sm i, .icon-sm svg {
     font-size: 1.25rem; }
-  .icon-sm + .icon-text {
-    width: calc(100% - $icon-size-sm - 1); }
+  /* .icon-sm + .icon-text {
+    width: calc(100% - $icon-size-sm - 1); } */
 
 .icon-shape {
   padding: 12px;
