--- a/src/_assets/css/custom.css
+++ b/src/_assets/css/custom.css
@@ -224,6 +224,11 @@ span.user {
   height: 100vh;
 }
 
+.navbar-vertical {
+  /*left: 5 !important;
+  position: relative !important; */
+}
+
 .container,
 .container-fluid {
   padding: 0 !important;
