--- a/src/_assets/css/theme.css
+++ b/src/_assets/css/theme.css
@@ -11283,7 +11283,7 @@ textarea[resize="horizontal"] {
           left: 0;
           top: 0.25rem;
           bottom: 0.25rem;
-          border-left: 2px solid #5e72e4; }
+          /* border-left: 2px solid #5e72e4; */ }
       .navbar-vertical .navbar-nav .nav-link > i {
         min-width: 2.25rem;
         font-size: .9375rem;
@@ -11510,12 +11510,12 @@ textarea[resize="horizontal"] {
         margin-right: -1.5rem; }
       .navbar-vertical.navbar-expand-md .navbar-nav .nav-link {
         padding: 0.65rem 1.5rem; }
-        .navbar-vertical.navbar-expand-md .navbar-nav .nav-link.active:before {
+        .navbar-vertical.navbar-expand-md .navbar-nav .nav-link.active {
           top: 0.25rem;
           bottom: 0.25rem;
           left: 0;
           right: auto;
-          border-left: 2px solid #5e72e4;
+          border-right: 10px solid #6862a5;
           border-bottom: 0; }
       .navbar-vertical.navbar-expand-md .navbar-nav .nav .nav-link {
         padding-left: 3.75rem; }
